--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/*------$GENERAL-------*/
+h1, 
+
 .row{
 	padding: 0;
 	margin: 0;
@@ -23,4 +26,21 @@ li{
 
 #accroche, #bouton{
 	text-align: center;
+}
+
+
+/*--------$CONCEPT------*/
+
+#concept{
+	text-align: center;
+}
+
+#concept p{
+	text-align: justify;
+}
+
+#concept img{   /* passage de 50px à 80px pour la taille des images*/
+	height: 80px;
+	width: 80px;
+	margin: 10px;
 }
