--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
+/*------------------------------------*\
+    $Tables des matieres
+\*------------------------------------*/
 .row{
 	padding: 0;
 	margin: 0;
 }
+
 .container{
 	width: 100%;
 }
+
+/*------------------------------------*\
+    			$HEADER
+\*------------------------------------*/
 #bg_img_1{
 	background: url(../img/Coworking2.jpg) no-repeat;
 	height: 900px;
@@ -23,4 +31,33 @@ li{
 
 #accroche, #bouton{
 	text-align: center;
+}
+
+/*------------------------------------*\
+    			$VIDEO
+\*------------------------------------*/
+#video{
+	background: #cacaca;
+}
+p{
+	text-align: left;
+}
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
+#vid{
+	padding: 0;
 }
