Préparation bloc Slider + Newsletter

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+/*--------$SOMMAIRE------------------------------------------*\
+/*------------------------------------------------------------
+/*--------GENERAL........... Mise en forme Générale
+/*--------?????????------
+/*--------CONCEPT........... structure bloc-page "concept"
+/*-----------------------------------------------------------*\
+/*-----------------------------------------------------------*\
+
+
+
+
 /*------$GENERAL-------*/
 h1, h2, h3{text-transform: uppercase;}
 
@@ -29,7 +40,9 @@ li{
 }
 
 
-/*--------$CONCEPT------*/
+/*-------------------*\
+	   $CONCEPT
+\*-------------------*/
 
 #concept{
 	text-align: center;
@@ -44,3 +57,21 @@ li{
 	width: 80px;
 	margin: 10px;
 }
+
+
+
+/*-------------------*\
+	   $EVENEMENT
+\*-------------------*/
+#newsletter{
+	margin-top: 20px;
+	
+}
+
+
+
+
+
+/*-------------------*\
+	   $NEWSLETTER
+\*-------------------*/
