--- a/css/style.css
+++ b/css/style.css
@@ -11,29 +11,58 @@ h1, h2, h3{text-transform: uppercase;}
 
 /*Premier bandeau*/
 
-#bg_img_1{
-	background: url(../img/Coworking2.jpg) no-repeat;
-	height: 900px;
-	background-size: 100%;
-
-}
-#menu{
-	background-color: red;
-	padding-top: 20px;
-	padding-bottom: 20px;
+.bandeau_1{
+	background-image: url(../img/coworking2.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	height: 600px;
 }
 
-#nav_bar{
-	background: transparent;
-}
-
-li{
-	display: inline-block;
+.nav_bar_contain{
+	height: 77px;
+	padding-left: 20px;
 	padding-right: 20px;
 }
 
-#accroche, #bouton{
+.nav_bar_menu{
+	margin-top: 12px;
+}
+
+.nav_bar_menu li{
+	background: rgba(0,0,0,0.1);
+}
+
+.nav_bar_bouton{
+	margin-top: 20px;
+	background: rgba(0,0,0,0.5);
+}
+
+.accroche{
+	width: 100%;
+	height: 50px;
+	position: absolute;
+	bottom: 230px;
 	text-align: center;
+}
+
+.accroche h1{
+	font-size: 2.2em;
+	color: #cbdb57;
+}
+
+.bouton{
+	width: 100%;
+	height: 50px;
+	position: absolute;
+	bottom: 130px;
+	text-align: center;
+}
+
+.bouton span{
+	border: 5px solid #FEFEFE;
+	color: white;
+	padding: 7px 10px;
 }
 
 /*--------$CONCEPT------*/
