--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
 h1, h2, h3, h4, h5, h6{
 	text-transform: uppercase;
 	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: bold;
+	font-weight: 800;
 }
 
 
@@ -128,11 +128,16 @@ p{
 #concept{
 	text-align: center;
 	padding: 50px 70px 70px 70px;
+	color: #616161;
+	background-color: #EEE;
 }
+
+#concept h1{ margin: 30px 0 30px 0;}
 
 #concept p{
 	text-align: justify;
-
+	word-wrap: break-word;
+	margin: 20px;
 }
 
 #concept img{   /* passage de 50px à 80px pour la taille des images*/
