--- a/css/style.css
+++ b/css/style.css
@@ -44,13 +44,6 @@ h1, h2, h3, h4, h5, h6{
 
 
 
-
-/*  CSS pour partie "VIDEO" à mettre dans la bonne section
-p{
-	font-family: 'Source Code Pro', ;
-}*/
-
-
 /*------------------------------------*\
     			Navbar
 \*------------------------------------*/
@@ -161,43 +154,44 @@ p{
     			$VIDEO
 \*------------------------------------*/
 
-
-#video{
+#section_video{
 	background: #424242;
 }
 
-#video p{
-	text-align: center;
-	color: #EEEEEE;
-	font-weight: 400;
-}
-
-#video h2{
-	text-align: center;
+#section_video p, h2{
+	text-align: left;
 	color: #EEEEEE;
 }
 
-.video-container {
-	position:relative;
-	padding-bottom:1px;
-	padding-top:1px;
-	height:0;
-	overflow: hidden;
+#section_video p{
+	font-family: 'Source Code Pro';
+	font-size: 15px;
 }
 
-.video-container iframe, .video-container object, .video-container embed {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
+.texte{
+	padding: 30px 30px;
 }
 
-#vid{
+.video{
 	padding: 0;
 }
 
+.video img{
+ 	width: 100%;
+ }
 
+ @media (max-width: 900px) {
+	.video img {
+    min-width: 400px;
+    text-align: center;
+  }
+}
+
+ @media (max-width: 900px) {
+	.texte {
+	padding: auto;
+  }
+}
 /*------------------------------------*\
     			$Temoignages
 \*------------------------------------*/
