--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ h1, h2, h3, h4, h5, h6{
 	background: #424242;
 }
 
-#section_video p, h2{
+#section_video p, #section_video h2{
 	text-align: left;
 	color: #EEEEEE;
 }
@@ -166,10 +166,6 @@ h1, h2, h3, h4, h5, h6{
 #section_video p{
 	font-family: 'Source Code Pro';
 	font-size: 15px;
-}
-
-.texte{
-	padding: 30px 30px;
 }
 
 .video{
