--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,6 @@ h1, h2, h3, h4, h5, h6{
 	background-color: #cbdb57;
 }
 
-
 /*-------RESPONSIVE for NAVBAR---------*/
 
 /*
@@ -156,6 +155,14 @@ h1, h2, h3, h4, h5, h6{
 	background-color: #C0CA33;
 }
 
+@media (max-width: 768px){
+	.accroche{
+		bottom: 150px;
+	}
+	.bouton{
+		bottom: 50px;
+	}
+}
 
 /*---------RESPONSIVE for HEADER----------*/
 
