--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,10 @@ h1, h2, h3, h4, h5, h6{
     			$ TEMOIGNAGES
 \*------------------------------------*/
 
+.row{margin: 10px;
+	padding: 10px 10px;
+}
+
 #temoignages{
 	margin: 50px;
 	
@@ -263,7 +267,6 @@ h1, h2, h3, h4, h5, h6{
 	height: 150px;
 	margin: 0px auto 35px;
 	box-shadow: 8px 8px 12px #AAA;
-	float: left;
 	display: block;
 }
 
@@ -283,8 +286,8 @@ h1, h2, h3, h4, h5, h6{
 	height: 150px;
 	margin: 0px auto 35px;
 	box-shadow: 8px 8px 12px #AAA;
-	float: right;
 	display: block;
+	float: right;
 }
 
 .tem3{
@@ -294,7 +297,6 @@ h1, h2, h3, h4, h5, h6{
 	height: 150px;
 	margin: 0px auto 35px;
 	box-shadow: 8px 8px 12px #AAA;
-	float: left;
 	display: block;
 }		
 
@@ -302,17 +304,18 @@ h1, h2, h3, h4, h5, h6{
 	color: #cbdb57;
 	text-align: left;
 	font-size: 18px;
-	width: 486px;
+	width: ;
 	line-height: 33px;
 	font-style: italic;
 	margin-bottom: 0;
+
 }
 
 .Parap{
 	color: #cbdb57;
 	text-align: right;
 	font-size:18px;
-	width: 486px;
+	width: ;
 	line-height: 33px;
 	float: right;
 	font-style: italic;
