--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,11 @@ h1, h2, h3, h4, h5, h6{
 	font-weight: 800;
 }
 
+img{
+	max-width: 100%;
+	height: auto;
+}
+
 /*---- RESPONSIVE GENERAL------*/
 /*
 @media (max-width: 768px) {   /* < 768px est la définition d'un smartphone pour Bootstrap 
@@ -96,6 +101,7 @@ h1, h2, h3, h4, h5, h6{
 .navbar-toggle .icon-bar {
 	background-color: #cbdb57;
 }
+
 
 /*-------RESPONSIVE for NAVBAR---------*/
 
@@ -154,14 +160,6 @@ h1, h2, h3, h4, h5, h6{
 	background-color: #C0CA33;
 }
 
-@media (max-width: 768px){
-	.accroche{
-		bottom: 150px;
-	}
-	.bouton{
-		bottom: 50px;
-	}
-}
 
 /*---------RESPONSIVE for HEADER----------*/
 
@@ -240,11 +238,6 @@ h1, h2, h3, h4, h5, h6{
 	font-size: 15px;
 }
 
-.video img{
-	max-width: 100%;
-	height: auto;
-}
-
 /*
 #section_video{
 	background: #424242;
@@ -304,8 +297,7 @@ h1, h2, h3, h4, h5, h6{
     			$ TEMOIGNAGES
 \*------------------------------------*/
 
-.row_temoignage{
-	margin: 10px;
+.row{margin: 10px;
 	padding: 10px 10px;
 }
 
@@ -418,10 +410,14 @@ h1, h2, h3, h4, h5, h6{
 
 #newsletter{
 	background-color: #C0CA33;
+	padding: 30px;
 	color: white;
 	font-weight: 600;
-	padding: 30px 0px;
+	padding: 30px 50px;
 }
+
+
+.social img{margin: 30px 10px;}
 
 
 #newsletter form{
@@ -436,7 +432,7 @@ h1, h2, h3, h4, h5, h6{
 	height: 50px;
 }
 #newsletter input[type="email"]{
-	width: 280px;
+	width: 320px;
 	color: black;
 	padding: 5px;
 	font-weight: normal;
@@ -451,62 +447,6 @@ h1, h2, h3, h4, h5, h6{
 	padding: 15px 55px;
 }
 
-#newsletter .row1{
-	margin-top: 17px;
-}
-
-#newsletter .row2{
-	margin-top: 30px;
-}
-
-#newsletter .row3{
-	margin-top: 42px;
-}
-
-#newsletter .row4 form{
-	margin-top: 0px;
-}
-
-.pictogramme{
-	margin-left: 6.333333%;
-}
-
-.first_pictogramme{
-
-}
-
-
-@media (max-width: 1040px) {
-	#newsletter input[type="image"]{
-		left: 0px;
-	}
-	.pictogramme, .first_pictogramme{
-		margin-top: 6px;
-	}
-	#newsletter input[type="email"]{
-	width: 250px;
-	}
-}
-
-@media (max-width: 1040px) {
-	#newsletter .row1{
-		margin-top: 0px;
-	}
-	#newsletter .row2{
-		margin-top: 10px;
-	}
-
-	#newsletter .row3{
-		margin-top: 15px;
-	}
-
-	#newsletter .row4 form{
-		margin-top: 0px;
-	}
-	#newsletter{
-		padding: 0px 0px;
-	}
-}
 
 /*-------RESPONSIVE for NEWSLETTER -------*/
 
