--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 
-.footer li{
+.footer li a{
 	color: #BDBDBD;
 }
 	
@@ -546,7 +546,8 @@ ul .copyright{
 
 .footer ul{
 	list-style: none;
-	padding-left: 35px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 .p_concept p{
