--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .nav_bar_menu{
-	background-color: rgba(255,255,255,0.8);
+	background-color: rgba(255,255,255,0.9);
 }
 
 .nav > li > a:hover{
@@ -194,12 +194,12 @@ h1, h2, h3, h4, h5, h6{
 	font-size: 15px;
 }
 
-#concept img{   /* passage de 50px à 80px pour la taille des images
+/*#concept img{   /* passage de 50px à 80px pour la taille des images
 						--> Demander icônes "concept" en 80/80px *.png au graphiste ou *.svg  */
-	height: 80px;
+	/*height: 80px;
 	width: 80px;
 	margin: 10px;
-}
+}*/
 
 
 
@@ -222,7 +222,7 @@ h1, h2, h3, h4, h5, h6{
 #section_video{
 	font-size: 0;
 	color: #EEEEEE;
-		background: #424242;
+	background: #424242;
 }
 
 .video{
@@ -403,6 +403,10 @@ h1, h2, h3, h4, h5, h6{
     padding-right: 0px;
 }
 
+.carousel-inner > .item > img{
+       width:710px;
+       height:360px;
+     }
 
 
 /*-------- RESPONSIVE for EVENEMENT & SLIDER------*/
@@ -422,7 +426,7 @@ h1, h2, h3, h4, h5, h6{
 	background-color: #C0CA33;
 	color: white;
 	font-weight: 600;
-	padding: 30px 0px;
+	padding: 31.5px 0px;
 }
 
 
@@ -544,8 +548,9 @@ ul .first_field{
 	font-size: 12px;
 }
 
-ul .copyright{
+/*ul */.copyright{
 	color: #616161;
+	text-align: center;
 }
 
 .footer div{
